# Hackaton_back

./: .gitignore  README.md  pyproject.toml
app/: alembic.ini  config.py  crud.py  generate_docs.sh  main.py  model.py  routes.py  schemas.py  sql_app.db  validate.py
app/migrations/: env.py
app/migrations/versions/: 1e06fcab1f38_migrations.py  39fcb2204654_.py  6b728f05eed2_типа_прикол.py  74c640017e0c_докинул_таблы.py  841a0dfd9ae6_почему_он_говорит_что_site_нет_в_user_.py  9be6b45c535e_помогите.py  e9ca92d5a81f_яйца.py
