[tool.poetry]
name = "hackaton-fast"
version = "0.1.0"
description = "Backend for hackaton app"
authors = ["Ogurche, MRXTOOR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
sqlalchemy = "^2.0.20"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.7"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
alembic = "^1.12.0"
art = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
